I hate ECS and AWS, lets make this a lot simpler

--- a/terraform/modules/load-balancer/init.cfg
+++ b/terraform/modules/load-balancer/init.cfg
@@ -1,10 +1,23 @@
 #cloud-config
-
-# https://learn.microsoft.com/en-us/azure/virtual-machines/linux/tutorial-automate-vm-deployment
-
 package_upgrade: true
 packages:
   - nginx
+# write_files:
+#   - path: /etc/nginx/nginx.conf
+#     content: |
+#       http {
+#         server {
+#           listen 80;
+#           location / {
+#             proxy_pass $URL_TO_BACKEND_IP_WITH_PORT_MAPPING
+#             proxy_http_version 1.1;
+#             proxy_set_header Upgrade $http_upgrade;
+#             proxy_set_header Connection keep-alive;
+#             proxy_set_header Host $host;
+#             proxy_cache_bypass $http_upgrade;
+#           }
+#         }
+#       }
 
 runcmd:
   - service nginx restart
