Got caddy running on Ubuntu web server

--- a/terraform/modules/load-balancer/init.cfg
+++ b/terraform/modules/load-balancer/init.cfg
@@ -1,23 +1,22 @@
-#cloud-config
+# cloud-config
+
+apt_upgrade: true
+apt:
+    sources:
+        caddy:
+            source: deb [trusted=yes] https://dl.cloudsmith.io/public/caddy/stable/deb/ubuntu focal main
+
 package_upgrade: true
 packages:
-  - nginx
-# write_files:
-#   - path: /etc/nginx/nginx.conf
-#     content: |
-#       http {
-#         server {
-#           listen 80;
-#           location / {
-#             proxy_pass $URL_TO_BACKEND_IP_WITH_PORT_MAPPING
-#             proxy_http_version 1.1;
-#             proxy_set_header Upgrade $http_upgrade;
-#             proxy_set_header Connection keep-alive;
-#             proxy_set_header Host $host;
-#             proxy_cache_bypass $http_upgrade;
-#           }
-#         }
-#       }
+  - caddy
+
+# https://caddyserver.com/docs/caddyfile/directives/reverse_proxy#srv
+write_files:
+  - path: /etc/caddy/Caddyfile
+    content: |
+      :80 {
+        respond "Hello, world!"
+      }
 
 runcmd:
-  - service nginx restart
+  - caddy run
