Setup Caddy configuration + security groups to properly use SRV record from Cloudmap to proxy to ecs service

--- a/terraform/modules/load-balancer/init.cfg
+++ b/terraform/modules/load-balancer/init.cfg
@@ -1,12 +1,11 @@
 # cloud-config
-
 apt_upgrade: true
 apt:
     sources:
         caddy:
             source: deb [trusted=yes] https://dl.cloudsmith.io/public/caddy/stable/deb/ubuntu focal main
 
-package_upgrade: true
+package_upgrade: tru
 packages:
   - caddy
 
@@ -15,8 +14,19 @@ write_files:
   - path: /etc/caddy/Caddyfile
     content: |
       :80 {
-        respond "Hello, world!"
+        reverse_proxy {
+          to backend.ownyourday.ca
+          dynamic srv {
+            name backend.ownyourday.ca
+            refresh 10s
+            dial_timeout 5s
+            dial_fallback_delay -1s
+          }
+        }
+        log {
+          output file /var/log/caddy/access.log
+        }
       }
 
 runcmd:
-  - caddy run
+  - caddy run --config /etc/caddy/Caddyfile
