Transferred DNS and SSL to Caddy

--- a/terraform/modules/load-balancer/init.cfg
+++ b/terraform/modules/load-balancer/init.cfg
@@ -1,19 +1,18 @@
 # cloud-config
 apt_upgrade: true
 apt:
-    sources:
-        caddy:
-            source: deb [trusted=yes] https://dl.cloudsmith.io/public/caddy/stable/deb/ubuntu focal main
+  sources:
+    caddy:
+      source: deb [trusted=yes] https://dl.cloudsmith.io/public/caddy/stable/deb/ubuntu focal main
 
-package_upgrade: tru
+package_upgrade: true
 packages:
   - caddy
 
-# https://caddyserver.com/docs/caddyfile/directives/reverse_proxy#srv
 write_files:
   - path: /etc/caddy/Caddyfile
     content: |
-      :80 {
+      ownyourday.ca {
         reverse_proxy {
           to backend.ownyourday.ca
           dynamic srv {
@@ -22,6 +21,8 @@ write_files:
             dial_timeout 5s
             dial_fallback_delay -1s
           }
+          health_uri      ownyourday.ca/api/health_check
+          health_timeout  5s
         }
         log {
           output file /var/log/caddy/access.log
