Added new relic to load balancer

--- a/terraform/modules/load-balancer/init.cfg
+++ b/terraform/modules/load-balancer/init.cfg
@@ -4,12 +4,18 @@ apt:
   sources:
     caddy:
       source: deb [trusted=yes] https://dl.cloudsmith.io/public/caddy/stable/deb/ubuntu focal main
+    newrelic-infra:
+      source: deb [trusted=yes] https://download.newrelic.com/infrastructure_agent/linux/apt/ jammy main
 
 package_upgrade: true
 packages:
   - caddy
+  - newrelic-infra
 
 write_files:
+  - path: /etc/newrelic-infra.yml
+    content: |
+      new_relic_license_key: ${new_relic_license_key}
   - path: /etc/caddy/Caddyfile
     content: |
       ownyourday.ca {
@@ -21,7 +27,7 @@ write_files:
             dial_timeout 5s
             dial_fallback_delay -1s
           }
-          health_uri      ownyourday.ca/api/health_check
+          health_uri      http://ownyourday.ca/api/health_check
           health_timeout  5s
         }
         log {
@@ -30,4 +36,5 @@ write_files:
       }
 
 runcmd:
+  - systemctl start newrelic-infra
   - caddy run --config /etc/caddy/Caddyfile
