Updated license key

--- a/terraform/modules/load-balancer/init.cfg
+++ b/terraform/modules/load-balancer/init.cfg
@@ -1,5 +1,4 @@
 # cloud-config
-apt_upgrade: true
 apt:
   sources:
     caddy:
@@ -15,7 +14,7 @@ packages:
 write_files:
   - path: /etc/newrelic-infra.yml
     content: |
-      new_relic_license_key: ${new_relic_license_key}
+      license_key: ${new_relic_license_key}
   - path: /etc/caddy/Caddyfile
     content: |
       ownyourday.ca {
