Added Caddy logging forwarding to new relic

--- a/terraform/modules/load-balancer/init.cfg
+++ b/terraform/modules/load-balancer/init.cfg
@@ -12,6 +12,11 @@ packages:
   - newrelic-infra
 
 write_files:
+  - path: /etc/newrelic-infra/logging.d/logging.yml
+    content: |
+      logs:
+        - name: caddy-access-logs
+          file: /var/log/caddy/access.log
   - path: /etc/newrelic-infra.yml
     content: |
       license_key: ${new_relic_license_key}
