Configured S3 bucket; provisioned infra for S3 bucket

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,11 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+aws:
+  service: S3
+  bucket: <%= ENV.fetch('S3_BUCKET_NAME', nil) %>
+  region: <%= ENV.fetch('AWS_REGION', nil) %>
+
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
