--- a/app.env.example
+++ b/app.env.example
@@ -15,3 +15,6 @@ NEW_RELIC_LICENSE_KEY=no
 AWS_REGION=ca-central-1
 S3_BUCKET_NAME=ownyourday-public
 FEATURE_FLAGS_USERS_REGISTRATION_ALLOW_LIST=true
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
