--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,6 +10,8 @@ aws:
   service: S3
   bucket: <%= ENV.fetch('S3_BUCKET_NAME', nil) %>
   region: <%= ENV.fetch('AWS_REGION', nil) %>
+  access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID', nil) %>
+  secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY', nil) %>
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
